# ft_linear_regression

./: .gitignore  README.md  pyproject.toml
ft_linear_regression/: plot.py  predict.py  train.py  util.py
ft_linear_regression/data/: model_info  theta
ft_linear_regression/util/: calc.py  file.py
