[tool.poetry]
name = "ft-linear-regression"
version = "0.1.0"
description = ""
authors = ["Sungwoo Park <codest99@gmail.com>"]
readme = "README.md"
packages = [{include = "ft_linear_regression"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
predict = 'ft_linear_regression.predict:run'
train = 'ft_linear_regression.train:run'
